--- a/FarmMarket.Tests/FarmMarket.Tests.csproj
+++ b/FarmMarket.Tests/FarmMarket.Tests.csproj
@@ -10,6 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FakeItEasy" Version="7.4.0" />
+    <PackageReference Include="FluentAssertions" Version="6.11.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -23,7 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Service\" />
+    <ProjectReference Include="..\FarmMarket.Data\FarmMarket.Data.csproj" />
+    <ProjectReference Include="..\FarmMarket.Service\FarmMarket.Service.csproj" />
   </ItemGroup>
 
 </Project>
