crud endpoint for farmproduct

--- a/FarmMarket.API/appsettings.json
+++ b/FarmMarket.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SD-0021\\MSSQLSERVER01;User ID=Obiora;Password=password;Database=FarmMarket;"
+    "DefaultConnection": "Server=SD-0021\\MSSQLSERVER01;User ID=Obiora;Password=password;Database=FarmMarket;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
