--- a/FarmMarket.API/FarmMarket.API.csproj
+++ b/FarmMarket.API/FarmMarket.API.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FarmMarket.Data\FarmMarket.Data.csproj" />
+    <ProjectReference Include="..\FarmMarket.Service\FarmMarket.Service.csproj" />
   </ItemGroup>
 
 </Project>
